--- a/EFC2.0/Pages/self_service/performance/competency.cshtml
+++ b/EFC2.0/Pages/self_service/performance/competency.cshtml
@@ -5,5 +5,148 @@
 <div class="app-container" dir="ltr">
     <div class="container-fluid px-0 main-content-page h-100">
         <partial name="self_service_tabs" />
+        <div class="aos-init aos-animate">
+            <div class="child-content nav-active-top" id="summary">
+                <div class="container-fluid p-3">
+                    <div class="grand-child nav-active-top">
+                        <div class="ng-star-inserted">
+                            <div class="page-title-h">
+                                <div class="d-flex justify-content-start align-items-center">
+                                    <div class="d-flex justify-content-start align-items-center">
+                                        <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
+                                        <img src="/images/emptyProfile.jpg" alt="Admin" width="30" class="rounded-circle ng-star-inserted">
+                                        <span class="ms-2" style="font-size: 14px;">
+                                            <p class="mb-0 fw-bold card-heading text-capitalize">HR DBMR</p>
+                                            <div class="text-muted small text-capitalize">Admin Department | Executive </div>
+                                        </span>
+                                        <mat-icon role="img" class="mat-icon notranslate mx-2 text-muted material-icons mat-icon-no-color ng-star-inserted" style="cursor: pointer;" aria-hidden="true" data-mat-icon-type="font">turned_in_not </mat-icon>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
+                                <div class="mainContentHeightOrg2">
+                                    <div class="mat-tab-group mat-primary">
+                                        <div class="tabs">
+                                            <a href="/self_service/performance/kra" class="tab-button">Key Result Areas (KRA)</a>
+                                            <a href="/self_service/performance/competency" class="tab-button mat-tab-body-active">Competency</a>
+                                            <a href="/self_service/performance/skillSet" class="tab-button">Skill</a>
+                                            <a href="/self_service/performance/review_history" class="tab-button">Review History</a>
+                                        </div>
+                                        <div class="container-fluid pt-2 ng-star-inserted">
+                                            <div class="p-2 my-1 ng-star-inserted">
+                                                <div class="row">
+                                                    <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 card-grp">
+                                                        <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">Talent Acquisition and Recruitment</p>
+                                                        <span class="text-muted m-0 small ms-1">Proficiency in sourcing, interviewing, and selecting qualified candidates</span>
+                                                    </mat-card>
+                                                    <div class="col-md-4 d-flex align-items-center"></div>
+                                                    <div class="col-2 p-0 d-flex align-items-center p-2 p-md-0 ng-star-inserted"></div>
+                                                    
+                                                </div>
+                                            </div>
+                                            <div class="p-2 my-1 ng-star-inserted">
+                                                <div class="row">
+                                                    <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 card-grp">
+                                                        <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">Budgeting and Financial Planning</p>
+                                                        <span class="text-muted m-0 small ms-1">Skill in budget preparation, monitoring, and financial forecasting</span>
+                                                    </mat-card>
+                                                    <div class="col-md-4 d-flex align-items-center"></div>
+                                                    <div class="col-2 p-0 d-flex align-items-center p-2 p-md-0 ng-star-inserted"></div>
+                                                    
+                                                </div>
+                                            </div>
+                                            <div class="p-2 my-1 ng-star-inserted">
+                                                <div class="row">
+                                                    <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 card-grp">
+                                                        <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">Customer Relationship Management</p>
+                                                        <span class="text-muted m-0 small ms-1">Building and maintaining strong customer relationships</span>
+                                                    </mat-card>
+                                                    <div class="col-md-4 d-flex align-items-center"></div>
+                                                    <div class="col-2 p-0 d-flex align-items-center p-2 p-md-0 ng-star-inserted"></div>
+                                                    
+                                                </div>
+                                            </div>
+                                            
+                                            <mat-paginator role="group" aria-label="Select page" class="mat-paginator">
+                                                <div class="mat-paginator-outer-container">
+                                                    <div class="mat-paginator-container">
+                                                        <div class="mat-paginator-page-size ng-star-inserted">
+                                                            <div class="mat-paginator-page-size-label"> Items per page: </div>
+                                                            <mat-form-field class="mat-form-field mat-paginator-page-size-select ng-tns-c111-146 mat-primary mat-form-field-type-mat-select mat-form-field-appearance-legacy mat-form-field-can-float mat-form-field-should-float mat-form-field-hide-placeholder ng-star-inserted">
+                                                                <div class="mat-form-field-wrapper ng-tns-c111-146">
+                                                                    <div class="mat-form-field-flex ng-tns-c111-146">
+                                                                        
+                                                                        <div class="mat-form-field-infix ng-tns-c111-146">
+                                                                            <mat-select role="combobox" aria-autocomplete="none" aria-haspopup="true" class="mat-select ng-tns-c167-147 ng-tns-c111-146 ng-star-inserted" id="mat-select-36" tabindex="0" aria-expanded="false" aria-label="Items per page:" aria-required="false" aria-disabled="false" aria-invalid="false">
+                                                                                <div cdk-overlay-origin="" class="mat-select-trigger ng-tns-c167-147">
+                                                                                    <div class="mat-select-value ng-tns-c167-147" id="mat-select-value-37">
+                                                                                        
+                                                                                        <span class="mat-select-value-text ng-tns-c167-147 ng-star-inserted">
+                                                                                            <span class="mat-select-min-line ng-tns-c167-147 ng-star-inserted">10</span>
+                                                                                        </span>
+                                                                                        
+                                                                                    </div>
+                                                                                    <div class="mat-select-arrow-wrapper ng-tns-c167-147">
+                                                                                        <div class="mat-select-arrow ng-tns-c167-147"></div>
+                                                                                    </div>
+                                                                                </div>
+                                                                                
+                                                                            </mat-select>
+                                                                            <span class="mat-form-field-label-wrapper ng-tns-c111-146">
+                                                                                
+                                                                            </span>
+                                                                        </div>
+                                                                        
+                                                                    </div>
+                                                                    <div class="mat-form-field-underline ng-tns-c111-146 ng-star-inserted"><span class="mat-form-field-ripple ng-tns-c111-146"></span></div>
+                                                                    
+                                                                    <div class="mat-form-field-subscript-wrapper ng-tns-c111-146">
+                                                                        
+                                                                        <div class="mat-form-field-hint-wrapper ng-tns-c111-146 ng-trigger ng-trigger-transitionMessages ng-star-inserted" style="opacity: 1; transform: translateY(0%);">
+                                                                            
+                                                                            <div class="mat-form-field-hint-spacer ng-tns-c111-146"></div>
+                                                                        </div>
+                                                                        
+                                                                    </div>
+                                                                </div>
+                                                            </mat-form-field>
+                                                            
+                                                        </div>
+                                                        
+                                                        <div class="mat-paginator-range-actions">
+                                                            <div class="mat-paginator-range-label"> 1 - 3 of 3 </div>
+                                                            
+                                                            <button mat-icon-button="" type="button" class="mat-focus-indicator mat-tooltip-trigger mat-paginator-navigation-previous mat-icon-button mat-button-base mat-button-disabled" aria-label="Previous page" disabled="true">
+                                                                <span class="mat-button-wrapper">
+                                                                    <svg viewBox="0 0 24 24" focusable="false" class="mat-paginator-icon">
+                                                                        <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"></path>
+                                                                    </svg>
+                                                                </span>
+                                                                <span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span>
+                                                            </button>
+                                                            
+                                                            <button mat-icon-button="" type="button" class="mat-focus-indicator mat-tooltip-trigger mat-paginator-navigation-next mat-icon-button mat-button-base mat-button-disabled" aria-label="Next page" disabled="true">
+                                                                <span class="mat-button-wrapper">
+                                                                    <svg viewBox="0 0 24 24" focusable="false" class="mat-paginator-icon">
+                                                                        <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
+                                                                    </svg>
+                                                                </span>
+                                                                <span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span>
+                                                            </button>
+                                                            
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </mat-paginator>
+                                        </div>
+                                    </div>
+                                </div>
+                            </mat-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
