--- a/EFC2.0/Pages/self_service/performance/skillSet.cshtml
+++ b/EFC2.0/Pages/self_service/performance/skillSet.cshtml
@@ -5,5 +5,68 @@
 <div class="app-container" dir="ltr">
     <div class="container-fluid px-0 main-content-page h-100">
         <partial name="self_service_tabs" />
+        <div class="aos-init aos-animate">
+            <div class="child-content nav-active-top" id="summary">
+                <div class="container-fluid p-3">
+                    <div class="grand-child nav-active-top">
+                        <div class="ng-star-inserted">
+                            <div class="page-title-h">
+                                <div class="d-flex justify-content-start align-items-center">
+                                    <div class="d-flex justify-content-start align-items-center">
+                                        <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
+                                        <img src="/images/emptyProfile.jpg" alt="Admin" width="30" class="rounded-circle ng-star-inserted">
+                                        <span class="ms-2" style="font-size: 14px;">
+                                            <p class="mb-0 fw-bold card-heading text-capitalize">HR DBMR</p>
+                                            <div class="text-muted small text-capitalize">Admin Department | Executive </div>
+                                        </span>
+                                        <mat-icon role="img" class="mat-icon notranslate mx-2 text-muted material-icons mat-icon-no-color ng-star-inserted" style="cursor: pointer;" aria-hidden="true" data-mat-icon-type="font">turned_in_not </mat-icon>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
+                                <div class="mainContentHeightOrg2">
+                                    <div class="mat-tab-group mat-primary">
+                                        <div class="tabs">
+                                            <a href="/self_service/performance/kra" class="tab-button">Key Result Areas (KRA)</a>
+                                            <a href="/self_service/performance/competency" class="tab-button">Competency</a>
+                                            <a href="/self_service/performance/skillSet" class="tab-button mat-tab-body-active">Skill</a>
+                                            <a href="/self_service/performance/review_history" class="tab-button">Review History</a>
+                                        </div>
+
+                                        <div class="container-fluid pt-2 ng-star-inserted">
+                                            <div class="row p-1">
+                                                <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 my-2 card-grp ng-star-inserted">
+                                                    <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">.Net </p>
+                                                    <span class="text-muted m-0 small ms-1">Level : 3</span><span class="text-muted m-0 small ms-1">Weightage(%) : 20</span>
+                                                </mat-card>
+                                                <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 my-2 card-grp ng-star-inserted">
+                                                    <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">Java </p>
+                                                    <span class="text-muted m-0 small ms-1">Level : 3</span><span class="text-muted m-0 small ms-1">Weightage(%) : 20</span>
+                                                </mat-card>
+                                                <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 my-2 card-grp ng-star-inserted">
+                                                    <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">HTML </p>
+                                                    <span class="text-muted m-0 small ms-1">Level : 3</span><span class="text-muted m-0 small ms-1">Weightage(%) : 20</span>
+                                                </mat-card>
+                                                <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 my-2 card-grp ng-star-inserted">
+                                                    <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">CSS </p>
+                                                    <span class="text-muted m-0 small ms-1">Level : 3</span><span class="text-muted m-0 small ms-1">Weightage(%) : 20</span>
+                                                </mat-card>
+                                                <mat-card class="mat-card mat-focus-indicator col-md-12 p-2 my-2 card-grp ng-star-inserted">
+                                                    <p class="card-title fw-bold m-0 card-heading text-capitalize ms-1">Java Script </p>
+                                                    <span class="text-muted m-0 small ms-1">Level : 3</span><span class="text-muted m-0 small ms-1">Weightage(%) : 20</span>
+                                                </mat-card>
+
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </mat-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
